feat(jobs): update model to remove logo and update docs
